--- a/Youtube_data_cleaning.Rmd
+++ b/Youtube_data_cleaning.Rmd
@@ -52,31 +52,12 @@ View(items)
 
 #Exploratory Data Analysis
 
-correlation_matrix
+Correlation Matrix
 ```{r}
-panel.cor <- function(x, y, digits=2, prefix="", cex.cor) 
-{
-    usr <- par("usr"); on.exit(par(usr)) 
-    par(usr = c(0, 1, 0, 1)) 
-    r <- abs(cor(x, y)) 
-    txt <- format(c(r, 0.123456789), digits=digits)[1] 
-    txt <- paste(prefix, txt, sep="") 
-    if(missing(cex.cor)) cex <- 0.8/strwidth(txt) 
- 
-    test <- cor.test(x,y) 
-    # borrowed from printCoefmat
-    Signif <- symnum(test$p.value, corr = FALSE, na = FALSE, 
-                  cutpoints = c(0, 0.001, 0.01, 0.05, 0.1, 1),
-                  symbols = c("***", "**", "*", ".", " ")) 
- 
-    text(0.5, 0.5, txt, cex = cex * r) 
-    text(.8, .8, Signif, cex=cex, col=2) 
-}
-numer <- ca[c("views", "likes", "dislikes", "comment_count")]
-pairs(numer, lower.panel = panel.smooth, upper.panel = panel.cor)
+library(Hmisc)
+rcorr(numer, type = "pearson")
 
-calm <- lm(views~likes+dislikes+comment_count)
-summary(calm)
+cor_mat <- ggcorr(numer, label = T ,digits = 3, low = "#ff0f0f", mid = "#ffffff", high = "#0206ed", midpoint = 0)
 ```
 
 Comment_count yields the highest correlation coefficient with each numerical variable.
